[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=65" ]

[project]
name = "wordfence"
authors = [
    { name = "Wordfence", email = "opensource@wordfence.com" }
]
maintainers = [
    { name = "Wordfence", email = "opensource@wordfence.com" }
]
description = "Command-line malware scanner powered by Wordfence"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security"
]
dependencies = [
    "packaging>=21.0",
    "requests>=2.3",
	"pymysql>=0.9.3"
]
dynamic = [ "version" ]

[tool.setuptools.packages.find]
include = [ "wordfence*" ]

[tool.setuptools.dynamic]
version = { attr = "wordfence.version.__version__" }

[project.urls]
Homepage = "https://www.wordfence.com/products/wordfence-cli/"
Documentation = "https://www.wordfence.com/help/wordfence-cli/"
Repository = "https://github.com/wordfence/wordfence-cli"

[project.scripts]
wordfence = "wordfence.cli.cli:main"
